--- a/index.html
+++ b/index.html
@@ -14,7 +14,24 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
 
-        <title>Alma Viva Home & Deco- Velas</title>
+        <title>Alma Viva Home & Deco | Decoración y Bienestar para el Hogar</title>
+        <meta name="description" content="Descubre velas de soja, aromas y accesorios de decoración ecológicos y sustentables en Alma Viva Home & Deco. Mejora tu hogar con nuestros productos únicos.">
+        <meta name="keywords" content="Alma Viva Home & Deco, velas de soja, aromas para el hogar, accesorios de decoración, servicios de decoración, tienda online de decoración, decoración del hogar, fragancias, ambientadores, decoración personalizada, productos decorativos">
+        <!--Protocolo open graph-->
+        <meta property="og:type" content="website"> 
+        <meta property="og:title" content="Alma Viva Home & Deco | Decoración y Bienestar para el Hogar"> 
+        <meta property="og:description" content="Descubre velas de soja, aromas y accesorios de decoración ecológicos y sustentables en Alma Viva Home & Deco. Mejora tu hogar con nuestros productos únicos."> 
+        <meta property="og:url" content="https://dpadin.github.io/index.html"> 
+        <meta property="og:image" content="https://dpadin.github.io/images/Almavivalogo2.jpg">
+        
+
+        
+        <link rel="shortcut icon" href="./img/av-favicon.ico" type="image/x-icon">
+        <link rel="icon" href="./img/av-favicon.ico" type="image/x-icon">
+
+
+
+
 </head>
 
 <body> <!-- Aqui arranca el cuerpo de la pagina. Aplica formato usando class-->
@@ -22,7 +39,7 @@
 <header>
 <nav class="navbar navbar-expand-lg ">
         <a class="navbar-brand" href="./index.html">
-                <img src="./img/Almavivalogo2.png" alt="">
+                <img src="./img/Almavivalogo2.png" alt="Loga de Almaviva home & Deco">
         </a>
         <div class="container-fluid"> <!--justify-content-center-->
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -82,7 +99,7 @@
                 <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
                                 <div class="carousel-item active" data-bs-interval="4000">
-                                        <img src="./img/Vela-sojs-prod.jpg" class="d-block w-100" alt="...">
+                                        <img src="./img/Vela-sojs-prod.jpg" class="d-block w-100" alt="Imagen de una vela de soja en un vaso de vidrio">
                                         <div class="carousel-caption ">
                                                 <a href="./pages/productos.html">
                                                         <h3>Velas de Soja </h3>
@@ -91,7 +108,7 @@
                                         </div>
                                 </div>
                                 <div class="carousel-item" data-bs-interval="4000">
-                                        <img src="./img/almohadones.jpg" class="d-block w-100" alt="...">
+                                        <img src="./img/almohadones.jpg" class="d-block w-100" alt="Muestra una foto de almohadones balñnco y beiges sobre un sillon confortable ">
                                         <div class="carousel-caption ">
                                                 <a href="./pages/productos.html">
                                                         <h3>Almohadones </h3>
@@ -100,7 +117,7 @@
                                         </div>
                                 </div>
                                 <div class="carousel-item" data-bs-interval="4000">
-                                        <img src="./img/accesorios.jpg" class="d-block w-100" alt="...">
+                                        <img src="./img/accesorios.jpg" class="d-block w-100" alt="Muestra una imagen de un oso de adorno colgante en una habitacion muy calida">
                                         <div class="carousel-caption ">
                                                 <a href="./pages/productos.html">
                                                         <h3>Accesorios </h3>
@@ -160,7 +177,7 @@
         </footer>
 
         <div class="contactenos"> <!--Boton de whatsap-->
-                <img src="./img/whatsapp.png" alt="">
+                <img src="./img/whatsapp.png" alt="Icono de whatsap para pulsar y abrir la aplicacion de mensajeria">
                 <h5>Contactenos!</h5>
         </div>
 
