--- a/pages/productos.html
+++ b/pages/productos.html
@@ -14,14 +14,28 @@
 
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
-        <title>Alma Viva Home & Deco- Productos</title>
+        <title>Productos de Decoración y Bienestar | Alma Viva Home & Deco</title>
+        <meta name="description" content="Explora nuestra colección de velas de soja, aromas para el hogar y accesorios de decoración. Encuentra productos ecológicos y sustentables en Alma Viva Home & Deco.">
+        <meta name="keywords" content="Alma Viva Home & Deco, velas de soja, aromas para el hogar, accesorios de decoración, servicios de decoración, tienda online de decoración, decoración del hogar, fragancias, ambientadores, decoración personalizada, productos decorativos">
+
+        <meta property="og:type" content="website"> 
+        <meta property="og:title" content="Productos de Decoración y Bienestar | Alma Viva Home & Deco"> 
+        <meta property="og:description" content="Explora nuestra colección de velas de soja, aromas para el hogar y accesorios de decoración. Encuentra productos ecológicos y sustentables en Alma Viva Home & Deco."> 
+        <meta property="og:url" content="https://dpadin.github.io/productos.html"> 
+        <meta property="og:image" content="https://dpadin.github.io/images/productos-banner.jpg">
+
+        <!--Flavicon-->
+        <link rel="shortcut icon" href="../img/av-favicon.ico" type="image/x-icon">
+        <link rel="icon" href="../img/av-favicon.ico" type="image/x-icon">
+
+
 </head>
 
 <body>
         <header>
                 <nav class="navbar navbar-expand-lg ">
                         <a class="navbar-brand" href="../index.html">
-                                <img src="../img/Almavivalogo2.png" alt="">
+                                <img src="../img/Almavivalogo2.png" alt="Logo de la mepresa alma viva, mustra una A y una V con una fina tipografia en color pastel">
                         </a>
                         <div class="container-fluid"> <!--justify-content-center-->
                                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -79,27 +93,27 @@
                 </section>
                 <section class="tarjetas-de-producto">
                         <div>
-                                <img src="../img/Vela-sojs-prod.jpg" alt="Vela de Soja" width="100%" height="75%"">
+                                <img src="../img/Vela-sojs-prod.jpg" alt="Imagen de Vela de Soja en vaso de vidrio en color claro" width="100%" height="75%"">
                             <h3>Velas de Soja</h3>            
                             <a href="">COMPRAR</a>
                         </div>
                         <div>
-                            <img src=" ../img/almohadones.jpg" alt="" width="150" height=150px>
+                            <img src=" ../img/almohadones.jpg" alt="Muestra imagen de almohadones en colores claros sobre un comodo sofa" width="150" height=150px>
                                 <h3>Almohadones</h3>
                                 <a href="">COMPRAR</a>
                         </div>
                         <div>
-                                <img src="../img/vajilla.jpg" alt="" width="150px" height=150px>
+                                <img src="../img/vajilla.jpg" alt="Muestra vajillas en un una sala de decoracion" width="150px" height=150px>
                                 <h3>Vajilla</h3>
                                 <a href="">COMPRAR</a>
                         </div>
                         <div>
-                                <img src="../img/accesorios.jpg" alt="" width="150px" height=150px>
+                                <img src="../img/accesorios.jpg" alt="Muestra la imagen de un oso de juguete colgante en una habitacion muy calida y cool" width="150px" height=150px>
                                 <h3>Accesorios</h3>
                                 <a href="">COMPRAR</a>
                         </div>
                         <div class="tar-prod-5">
-                                <img src="../img/bano.jpg" alt="" width="150px" height=150px>
+                                <img src="../img/bano.jpg" alt="Muestra imagenes de accesorios de baños" width="150px" height=150px>
                                 <h3>Baño</h3>
                                 <a href="">COMPRAR</a>
                         </div>
@@ -141,7 +155,7 @@
                 </section>
         </footer>
         <div class="contactenos"> <!--Boton de whatsap-->
-                <img src="../img/whatsapp.png" alt="">
+                <img src="../img/whatsapp.png" alt="Muestra icono de whatsap, pulsar para conectar con la mensajeria">
                 <h5>Contactenos!</h5>
         </div>
         <!-- esta linea es para bootstrap-->
